# knowledge-base

./: .gitignore  README.md
.github/workflows/: backend-image.yml  tauri-windows.yml
backend/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py  auth.py  chat.py  notes.py  tags.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/tasks/: indexer.py
backend/tests/: test_notes.py
docs/: BUILD.md  DEPLOY.md
scripts/: install-on-nas.sh
windows-client/: .gitignore  build.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
windows-client/src/: App.vue
windows-client/src-tauri/: Cargo.toml  tauri.conf.json
windows-client/src-tauri/capabilities/: default.json
windows-client/src-tauri/src/: lib.rs  main.rs
windows-client/src/api/: auth.ts  chat.ts  index.ts  notes.ts  tags.ts  users.ts
windows-client/src/components/: ChatInput.vue  ChatMessages.vue  ChatPanel.vue  ErrorBoundary.vue  HomeSidebar.vue  NoteEditor.vue  NoteList.vue  SettingsDrawer.vue  ShortcutsModal.vue
windows-client/src/router/: index.ts
windows-client/src/stores/: auth.ts  chat.ts  notes.ts  settings.ts
windows-client/src/styles/: global.css
windows-client/src/utils/: export.ts
windows-client/src/views/: HomeView.vue  LoginView.vue
