[package]
name = "knowledge-base"
version = "0.1.0"
description = "Personal AI Knowledge Base"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "knowledge_base_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
